--- a/ansible/roles/forc_api/tasks/main.yml
+++ b/ansible/roles/forc_api/tasks/main.yml
@@ -9,8 +9,8 @@
 
 
 
-#- include: "015-forc.yml"
-#  tags: ['forc_forc']
+- include: "015-forc.yml"
+  tags: ['forc_forc']
 
 - include: "020-openresty.yml"
   tags: ['forc_openresty']
