--- a/ansible/roles/forc_api/tasks/005-packages.yml
+++ b/ansible/roles/forc_api/tasks/005-packages.yml
@@ -13,3 +13,8 @@
   apt:
     name: python3-pip
     state: latest
+
+- name: Install virtualenv
+  apt:
+    name: python3-virtualenv
+    state: latest
