--- a/ansible/roles/forc_api/tasks/005-packages.yml
+++ b/ansible/roles/forc_api/tasks/005-packages.yml
@@ -14,7 +14,12 @@
     name: python3-pip
     state: latest
 
+- name: Install setuptools
+  apt:
+    name: python-setuptools
+    state: latest
+
 - name: Install virtualenv
   apt:
-    name: python3-virtualenv
+    name: virtualenv
     state: latest
