ansible -> fixed uwsgi and venv paths

--- a/ansible/roles/forc_api/tasks/015-forc.yml
+++ b/ansible/roles/forc_api/tasks/015-forc.yml
@@ -9,6 +9,7 @@
   pip:
     requirements: "{{ FORC_INSTALLATION_PATH }}simpleVMWebGateway/FlaskOpenRestyConfigurator/requirements.txt"
     virtualenv: "{{ FORC_INSTALLATION_PATH }}simpleVMWebGateway/FlaskOpenRestyConfigurator/venv"
+    virtualenv_python: python3
 
 - name: Generate uwsgi config
   template:
