ansible -> more doc

--- a/ansible/roles/forc_api/tasks/main.yml
+++ b/ansible/roles/forc_api/tasks/main.yml
@@ -7,11 +7,10 @@
 - include: "005-packages.yml"
   tags: ['forc_packages']
 
-
-
 - include: "015-forc.yml"
   tags: ['forc_forc']
 
 - include: "020-openresty.yml"
   tags: ['forc_openresty']
+  when: INSTALL_OPENRESTY == 'yes'
 
