feature(users): now able to add another user to a backend

--- a/ansible/roles/forc_api/tasks/000-preparation.yml
+++ b/ansible/roles/forc_api/tasks/000-preparation.yml
@@ -27,3 +27,15 @@
     state: directory
     path: "{{ FORC_TEMPLATE_PATH }}"
     recurse: yes
+
+- name: Create lua scripts folders
+  file:
+    state: directory
+    path: "{{ FORC_BACKEND_PATH }}/scripts"
+    recurse: yes
+
+- name: Create backend users folders
+  file:
+    state: directory
+    path: "{{ FORC_BACKEND_PATH }}/users"
+    recurse: yes
