--- a/ansible/roles/forc_api/tasks/005-packages.yml
+++ b/ansible/roles/forc_api/tasks/005-packages.yml
@@ -19,6 +19,11 @@
     name: python-setuptools
     state: latest
 
+- name: Install python3-setuptools
+  apt:
+    name: python3-setuptools
+    state: latest
+
 - name: Install virtualenv
   apt:
     name: virtualenv
