fix(forc): werkzeug update and fix, adjust users path

--- a/ansible/roles/forc_api/tasks/015-forc.yml
+++ b/ansible/roles/forc_api/tasks/015-forc.yml
@@ -21,6 +21,12 @@
     src: forc.service.j2
     dest: /etc/systemd/system/forc.service
 
+- name: Copy example templates
+  copy:
+    src: "{{ FORC_INSTALLATION_PATH }}/simpleVMWebGateway/examples/templates/"
+    dest: "{{ FORC_TEMPLATE_PATH }}"
+    remote_src: true
+
 - name: Reload systemd daemon and enable forc
   systemd:
     service: forc
