--- a/ansible/roles/forc_api/tasks/015-forc.yml
+++ b/ansible/roles/forc_api/tasks/015-forc.yml
@@ -4,6 +4,7 @@
   git:
     repo: https://github.com/deNBI/simpleVMWebGateway.git
     dest: "{{ FORC_INSTALLATION_PATH }}/simpleVMWebGateway/"
+    force: yes
 
 - name: Install requirements in a venv
   pip:
