--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,8 +6,9 @@ updates:
         interval: "weekly"
     target-branch: "dev"
     reviewers:
-      - "deNBI/portal-dev"
-      - "awalende"
+      - "vktrrdk"
+      - "eKatchko"
+      - "dweinholz"
     commit-message:
       prefix: "feat"
       include: "scope"
