--- a/ansible/roles/forc_api/tasks/015-forc.yml
+++ b/ansible/roles/forc_api/tasks/015-forc.yml
@@ -5,6 +5,7 @@
     repo: https://github.com/deNBI/simpleVMWebGateway.git
     dest: "{{ FORC_INSTALLATION_PATH }}/simpleVMWebGateway/"
     force: yes
+    version: "{{ REPOSITORY_BRANCH }}"
 
 - name: Install requirements in a venv
   pip:
