--- a/ansible/roles/forc_api/tasks/020-openresty.yml
+++ b/ansible/roles/forc_api/tasks/020-openresty.yml
@@ -25,8 +25,8 @@
     name: openresty
     state: latest
 
-- name: Install lua-resty-openidc
-  shell: "opm install zmartzone/lua-resty-openidc"
+- name: Install lua-resty-openidc, lua-resty-http, lua-resty-session, lua-resty-jwt
+  shell: "opm install zmartzone/lua-resty-openidc ledgetech/lua-resty-http bungle/lua-resty-session cdbattags/lua-resty-jwt"
   args:
     creates: /usr/local/openresty/site/lualib/resty/openidc.lua
 
