--- a/ansible/roles/forc_api/tasks/main.yml
+++ b/ansible/roles/forc_api/tasks/main.yml
@@ -16,5 +16,5 @@
 
 - include: "025-backup.yml"
   tags: ["forc-backup"]
-  when: {{FORC_BACKUP_ENABLED}} == 'yes'
+  when: FORC_BACKUP_ENABLED == 'yes'
 
