--- a/ansible/roles/forc_api/vars/main.yml
+++ b/ansible/roles/forc_api/vars/main.yml
@@ -5,7 +5,7 @@
 # Ex: reverseproxy.bibiserv.projects.bi.denbi.de
 DOMAIN: ""
 
-FORC_BACKUP_ENABLED: yes
+FORC_BACKUP_ENABLED: "yes"
 FORC_BACKUP_ROTATION_ENABLED: true
 FORC_BACKUP_ROTATION_MAX_SIZE: 5
 FORC_BACKUP_ROTATION_CUT_SIZE: 4
