--- a/renovate.json
+++ b/renovate.json
@@ -27,6 +27,7 @@
   "assignees": ["team:portal-dev"],
   "branchPrefix": "deps/",
   "bumpVersion": "minor",
-  "commitMessage": "{{{commitMessagePrefix}}} {{{commitMessageAction}}} {{{commitMessageTopic}}} {{{commitMessageExtra}}}",
+  "rebaseWhen": "behind-base-branch",	
+  "commitBodyTable": "true",
   "commitMessagePrefix": "feat(Dependencies):"
 }
