--- a/examples/templates/rstudio%v03.conf
+++ b/examples/templates/rstudio%v03.conf
@@ -14,7 +14,7 @@
                     end
 
                     -- Protect this location and allow only one specific ELIXIR User
-                    if (res.id_token.sub ~= "{{ owner }}@elixir-europe.org" and not user_service.file_exists(ngx.var.user_path .. res.id_token.sub)) then
+                    if (res.id_token.sub ~= "{{ owner }}" and not user_service.file_exists(ngx.var.user_path .. res.id_token.sub)) then
                             ngx.exit(ngx.HTTP_FORBIDDEN)
                     end
             }
