--- a/examples/templates/jupyternotebook%v01.conf
+++ b/examples/templates/jupyternotebook%v01.conf
@@ -13,7 +13,7 @@ location /{{ key_url }} {
                         end
 
                         -- Protect this location and allow only one specific ELIXIR User
-                        if res.id_token.sub ~= "{{ owner }}@elixir-europe.org" then
+                        if res.id_token.sub ~= "{{ owner }}" then
                                 ngx.exit(ngx.HTTP_FORBIDDEN)
                         end
                 }
