fix(ubuntu-version): prepare playbook and forc req for ubuntu focal

--- a/ansible/roles/forc_api/tasks/020-openresty.yml
+++ b/ansible/roles/forc_api/tasks/020-openresty.yml
@@ -16,7 +16,7 @@
 
 - name: Add OpenResty APT repository
   apt_repository:
-    repo: deb http://openresty.org/package/ubuntu bionic main
+    repo: "deb http://openresty.org/package/ubuntu {{ ansible_lsb.codename|lower }} main"
     state: present
     update_cache: yes
 
