--- a/ansible/roles/forc_api/meta/main.yml
+++ b/ansible/roles/forc_api/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Alex Walender
-  description: This installs OpenResty and FORC on a baremetal Ubuntu 18 system.
+  description: This installs OpenResty and FORC on a baremetal Ubuntu 18 or 20 system.
   company: de.NBI
   license: Apache
   min_ansible_version: 2.4
@@ -8,6 +8,7 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - bionic
+        - focal
 
   galaxy_tags:
     - reverseproxy
