--- a/ansible/roles/forc_api/tasks/025-backup.yml
+++ b/ansible/roles/forc_api/tasks/025-backup.yml
@@ -5,7 +5,7 @@
 
 - name: "Add Docker Repository"
   apt_repository:
-    repo: deb https://download.docker.com/linux/ubuntu bionic stable
+    repo: "deb https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename|lower }} stable"
     state: present
 
 - name: "Update apt and install docker-ce"
