--- a/examples/templates/jupyternotebook%v01.conf
+++ b/examples/templates/jupyternotebook%v01.conf
@@ -19,6 +19,7 @@ location /{{ key_url }} {
                 }
 
                 # After check via lua-oidc is done, start reverse proxying this backend by configuring a billion headers.
+            rewrite /{{ key_url }}/(.*) /$1 break;
 		    proxy_pass {{ location_url }};
 		    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		    proxy_set_header X-Real-IP $remote_addr;
