--- a/examples/templates/jupyternotebook%v01.conf
+++ b/examples/templates/jupyternotebook%v01.conf
@@ -19,16 +19,19 @@ location /{{ key_url }} {
                 }
 
                 # After check via lua-oidc is done, start reverse proxying this backend by configuring a billion headers.
-            rewrite /{{ key_url }}/(.*) /$1 break;
-		    proxy_pass {{ location_url }};
-		    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		    proxy_set_header X-Real-IP $remote_addr;
-		    proxy_set_header Host $http_host;
-		    proxy_http_version 1.1;
-		    proxy_redirect off;
-		    proxy_buffering off;
-		    proxy_set_header Upgrade $http_upgrade;
-		    proxy_set_header Connection "upgrade";
-		    proxy_read_timeout 86400;
+        rewrite /{{ key_url }}/(.*) /$1 break;
+        proxy_pass {{ location_url }};
+        sub_filter '"/' '"/{{ key_url }}/';
+        sub_filter_once off;
+
+        proxy_http_version 1.1;
+        proxy_set_header Host $host:$server_port;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Origin '';
 
 	}
