--- a/examples/templates/jupyternotebook%v03.conf
+++ b/examples/templates/jupyternotebook%v03.conf
@@ -51,7 +51,8 @@
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
                 proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection $connection_upgrade;
+                        proxy_read_timeout 20d;
+
 
         # websocket headers
         proxy_http_version 1.1;
