--- a/examples/templates/jupyternotebook%v02.conf
+++ b/examples/templates/jupyternotebook%v02.conf
@@ -21,20 +21,20 @@ location /{{ key_url }} {
 
                 # After check via lua-oidc is done, start reverse proxying this backend by configuring a billion headers.
                 proxy_pass {{ location_url }};
+                                 proxy_http_version 1.1;
+
                 proxy_set_header Host $host;
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
                 proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection $connection_upgrade;
                         proxy_read_timeout 20d;
+                        proxy_set_header X-Scheme $scheme;
 
+                client_max_body_size 0;
+                add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+                add_header Referrer-Policy "same-origin" always;
 
-        # websocket headers
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_set_header X-Scheme $scheme;
-
-        proxy_buffering off;
 
 	}
