--- a/examples/templates/rstudio%v01.conf
+++ b/examples/templates/rstudio%v01.conf
@@ -11,7 +11,7 @@
                     end
 
                     -- Protect this location and allow only one specific ELIXIR User
-                    if res.id_token.sub ~= "{{ owner }}@elixir-europe.org" then
+                    if res.id_token.sub ~= "{{ owner }}" then
                             ngx.exit(ngx.HTTP_FORBIDDEN)
                     end
             }
