--- a/examples/templates/vscode%v03.conf
+++ b/examples/templates/vscode%v03.conf
@@ -45,6 +45,7 @@
         }
 
         # After check via lua-oidc is done, start reverse proxying this backend by configuring a billion headers.
+        rewrite /{{ key_url }}/(.*) /$1 break;
         proxy_pass {{ location_url }};
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
