--- a/ansible/roles/forc_api/tasks/020-openresty.yml
+++ b/ansible/roles/forc_api/tasks/020-openresty.yml
@@ -42,6 +42,11 @@
     dest: /etc/openresty/nginx.conf
   register: openresty_config
 
+- name: Copy html files
+  copy:
+    src: "{{ role_path }}/files/html"
+    dest: "/usr/local/openresty/nginx"
+
 - name: Restart OpenResty on config change
   systemd:
     name: openresty
