use truee as value

--- a/ansible/roles/forc_api/tasks/main.yml
+++ b/ansible/roles/forc_api/tasks/main.yml
@@ -15,9 +15,9 @@
 
 - include: "020-openresty.yml"
   tags: ['forc_openresty']
-  when: INSTALL_OPENRESTY == 'yes'
+  when: INSTALL_OPENRESTY
 
 - include: "025-backup.yml"
   tags: ["forc-backup"]
-  when: FORC_BACKUP_ENABLED == 'yes'
+  when: FORC_BACKUP_ENABLED
 
