feat(Forc):added option to run service without https in local network

--- a/ansible/roles/forc_api/vars/main.yml
+++ b/ansible/roles/forc_api/vars/main.yml
@@ -30,6 +30,11 @@ FORC_TEMPLATE_PATH: "/var/forc/template_path/"
 # The Port on which OpenResty will bind forc to.
 FORC_SERVICE_PORT: 5000
 
+# If Forc Service will use HTTPs -- if not  FORC_LOCAL_NETWORK must be provided
+FORC_SERVICE_USE_HTTPS: true
+
+#IF Forc Service does not use https needs to provided to allow requests from this specific network
+FORC_LOCAL_NETWORK: ""
 # Set this to no if you don't use certbot for autogenerating ssl certs.
 CERTBOT_USED: "yes"
 
