initial commit, added API call and dynamically generated .conf for research environments

--- a/examples/templates/emgb%v01.conf
+++ b/examples/templates/emgb%v01.conf
@@ -30,10 +30,11 @@
             end
 
             -- Protect this location and allow only one specific ELIXIR User
-            if (res.id_token.sub ~= "{{ owner }}" and not user_service.file_exists(ngx.var.user_path .. res.id_token.sub)) then
-
-                ngx.exit(ngx.HTTP_FORBIDDEN)
-            end
+            {% if only_allow_owner %}
+                    if (res.id_token.sub ~= "{{ owner }}" and not user_service.file_exists(ngx.var.user_path .. res.id_token.sub)) then
+                            ngx.exit(ngx.HTTP_FORBIDDEN)
+                    end
+            {% endif %}
 
             ngx.req.set_header("X-Auth-Audience", res.id_token.aud)
             ngx.req.set_header("X-Auth-Email", res.id_token.email)
