--- a/examples/templates/guacamole%v01.conf
+++ b/examples/templates/guacamole%v01.conf
@@ -14,9 +14,11 @@ location /{{ key_url }}/ {
             end
 
             -- Protect this location and allow only one specific ELIXIR User
-            if res.id_token.sub ~= "{{ owner }}" then
-                    ngx.exit(ngx.HTTP_FORBIDDEN)
-            end
+            {% if only_allow_owner %}
+                    if (res.id_token.sub ~= "{{ owner }}" and not user_service.file_exists(ngx.var.user_path .. res.id_token.sub)) then
+                            ngx.exit(ngx.HTTP_FORBIDDEN)
+                    end
+            {% endif %}
     }
 
 
