--- a/examples/templates/rstudio%v03.conf
+++ b/examples/templates/rstudio%v03.conf
@@ -13,10 +13,12 @@
                             ngx.exit(ngx.HTTP_INTERNAL_SERVER_ERROR)
                     end
 
-                    -- Protect this location and allow only one specific ELIXIR User
-                    if (res.id_token.sub ~= "{{ owner }}" and not user_service.file_exists(ngx.var.user_path .. res.id_token.sub)) then
-                            ngx.exit(ngx.HTTP_FORBIDDEN)
-                    end
+                -- Protect this location and allow only one specific ELIXIR User
+                {% if only_allow_owner %}
+                        if (res.id_token.sub ~= "{{ owner }}" and not user_service.file_exists(ngx.var.user_path .. res.id_token.sub)) then
+                                ngx.exit(ngx.HTTP_FORBIDDEN)
+                        end
+                {% endif %}
             }
 
 
