fixed issue with theiaide and rstudio, should be working now

--- a/examples/templates/rstudio%v02.conf
+++ b/examples/templates/rstudio%v02.conf
@@ -22,7 +22,7 @@
       rewrite ^/{{ key_url }}/(.*)$ /$1 break;
       proxy_pass {{ location_url }};
       proxy_redirect {{ location_url }} $scheme://$http_host/{{ key_url }}/;
-      proxy_http_version 1.1;
+      proxy_http_version 1.1; @ reviewer: we have the same here. is this necessary?
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection $connection_upgrade;
       proxy_read_timeout 20d;
