--- a/examples/templates/theiaide%v03.conf
+++ b/examples/templates/theiaide%v03.conf
@@ -18,11 +18,6 @@
         set $user_path '{{ forc_backend_path }}/users/{{backend_id}}/';
         # Run this lua block, which checks if we are authenticated (again) und filters request by JWT (via id_token.sub)
         access_by_lua_block {
-            # temporary logging
-            local ONLY_ALLOW_OWNER = {{ 'true' if only_allow_owner else 'false' }}
-            ngx.log(ngx.NOTICE, "ONLY_ALLOW_OWNER(runtime)=", tostring(ONLY_ALLOW_OWNER), type(ONLY_ALLOW_OWNER))
-            ngx.log(ngx.NOTICE, "only_allow_owner(runtime)=", tostring(only_allow_owner), type(only_allow_owner))
-
             local user_service = require("user_service")
             -- Start actual openid authentication procedure
             local res, err = require("resty.openidc").authenticate(opts2)
@@ -33,7 +28,6 @@
                 ngx.exit(ngx.HTTP_INTERNAL_SERVER_ERROR)
             end
 
-            # JINJA_ONLY_ALLOW_OWNER={{ only_allow_owner | tojson }}
             -- Protect this location and allow only one specific ELIXIR User
             {% if only_allow_owner is true %}
                 if (res.id_token.sub ~= "{{ owner }}" and not user_service.file_exists(ngx.var.user_path .. res.id_token.sub)) then
@@ -53,22 +47,22 @@
             ngx.req.set_header("X-Auth-Locale", res.id_token.locale)
         }
 
-                # After check via lua-oidc is done, start reverse proxying this backend by configuring a billion headers.
+        # After check via lua-oidc is done, start reverse proxying this backend by configuring a billion headers.
+        rewrite /{{ key_url }}/(.*) /$1 break;
+        proxy_pass {{ location_url }};
+        proxy_http_version 1.1; # @reviewer: is this needed?
 
-                proxy_pass {{ location_url }};
-                             proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_read_timeout 20d;
+        proxy_set_header X-Scheme $scheme;
 
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Proto $scheme;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection $connection_upgrade;
-                        proxy_read_timeout 20d;
-                        proxy_set_header X-Scheme $scheme;
-
-                client_max_body_size 0;
-                add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
-                add_header Referrer-Policy "same-origin" always;
+        client_max_body_size 0;
+        add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+        add_header Referrer-Policy "same-origin" always;
 
 	}
