--- a/FastapiOpenRestyConfigurator/requirements.txt
+++ b/FastapiOpenRestyConfigurator/requirements.txt
@@ -5,3 +5,7 @@ Jinja2==3.1.6
 python-dotenv==1.2.1
 gunicorn==23.0.0
 pydantic-settings
+
+# testing
+pytest==8.4.2
+pytest-asyncio # TODO: @reviewer: which version?
